# sample_python_project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: handoff.md  meeting-qa.md
.cursor/: main.mdc  notebook_snippet.mdc
conf/: __init__.py  config.yaml  load_config.py
conventions/: CONVENTIONS.md  PROJECT_GUIDE.md  python-conventions.md
docs/: status.md
notebooks/: sample.ipynb
src/: logging_utils.py
